fixed the overlap issue with numbers on code blocks and horizontal scrolling.

--- a/docs/.vuepress/theme/styles/custom/base/_type-and-content.scss
+++ b/docs/.vuepress/theme/styles/custom/base/_type-and-content.scss
@@ -68,7 +68,10 @@ div[class*="language-"] {
   }
 
   &.line-numbers-mode .line-numbers-wrapper {
+    z-index: 1;
+    height: 100%;
     color: #333;
+    background-color: #fbfbfb;
   }
 
   &.line-numbers-mode:after {
